Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL), 10.6, 11.4
Description
Splitted from a case from Roel's comment in MDEV-33242[1], reproducible in 10.5 and 10.6 53c6c823dc7cafefffdc93c79661cfb146ff8641
set global sql_mode=(SELECT CONCAT (@@sql_mode,',no_zero_date')); |
install soname 'ha_spider'; |
Attachments
Issue Links
- relates to
-
MDEV-32753 Spider engine does not load in ORACLE mode
-
- Closed
-
-
MDEV-33706 backport some spider fixes to 10.4 which was unlocked
-
- Closed
-
- split from
-
MDEV-33242 SPIDER plugin initialization failed at 'create table if not exists mysql.spider_tables ... with 'Specified key was too long; max key length is 1000 bytes', Warning: Memory not freed: 10720
-
- Closed
-
- split to
-
MDEV-33584 sql plugin init failure with traditional sql_mode
-
- Closed
-